--- a/RealNVP_Geology.ipynb
+++ b/RealNVP_Geology.ipynb
@@ -76,6 +76,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 2D example \n",
+    "\n",
+    "> Read data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from scipy.io import loadmat\n",
+    "#temp = loadmat('../Ens_saved_YST.mat')\n",
+    "\n",
+    "import h5py\n",
+    "f = h5py.File('../Ens_saved_YST.mat', 'r')\n",
+    "prediction = np.array(f['Pred'])\n",
+    "velocity_fields = np.array(f['Vels'])\n",
+    "\n",
+    "print(Pred.shape, Vels.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(38636, 1408) (38636, 128, 128)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(Pred.shape, Vels.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1D example.\n",
+    "\n",
     "> Make conditional Real NVP predictions."
    ]
   },
